--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,25 @@
-@import './base.css';
+@font-face {
+  font-family: futur;
+  src: url(./font/futur.ttf);
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
 
 #app {
-  max-width: 1280px;
+  overflow-x: hidden;
+  /* max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem; */
 
-  font-weight: normal;
+  /* font-weight: normal; */
 }
+
+/* @import './base.css';
+
+
+
 
 a,
 .green {
@@ -32,4 +45,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
