--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,29 @@
-
 body::-webkit-scrollbar {
   display: none;
 }
 
+html {
+  height: 100vh;
+  overflow: auto;
+}
+body {
+  height: 100%;
+}
+
 #app {
+  position: relative;
+  width: 100%;
+  /* height: 100vh; */
+  overflow-y: auto;
   overflow-x: hidden;
+  /* overflow: hidden; */
+  /* max-width: 100vw; */
+  /* height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto; */
+  /* 
+  overflow-y: auto;
+  height: 100vh; */
   /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem; */
