--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,22 +2,19 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-html {
-  height: 100vh;
-  overflow: auto;
-}
 body {
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 #app {
   position: relative;
+  overflow-x: clip;
 }
 
 .dan-button {
   @apply w-full h-[62px] leading-[62px] text-white text-lg text-center rounded-[31px] bg-gradient-to-r from-[#ef7ca4] to-[#f48b8b] cursor-pointer;
 }
-
 
 /* The skeleton Class */
 .skeleton {
@@ -40,7 +37,14 @@ body {
   width: 100%;
   height: 100%;
   transform: translateX(-100%);
-  background: -webkit-gradient(linear, left top, right top, from(transparent), color-stops(#ffffff05), to(transparent));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(transparent),
+    color-stops(#ffffff05),
+    to(transparent)
+  );
 
   background: linear-gradient(90deg, transparent, #ffffff05, transparent);
 
