--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,3 +1,5 @@
+// @import './base.css';
+
 body::-webkit-scrollbar {
   display: none;
 }
@@ -59,12 +61,12 @@ body {
     transform: translateX(100%);
   }
 }
-/* @import './base.css';
 
 
 
 
-a,
+
+/*a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
