--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -62,9 +62,10 @@ body {
   }
 }
 
-
-
-
+@font-face {
+  font-family: "chen";
+  src: url(../../public/ChenYuluoyan-Thin.ttf);
+}
 
 /*a,
 .green {
